<resources>
    <string name="app_name">Smart Home</string>

    <string name="splash_screen_error_toast">Нет доступа к сети. Включите сеть и зайдите в приложение!</string>


    <string name="hint_email">почта</string>
    <string name="hint_password">пароль</string>

    <string name="button_login_enter">Вход</string>
    <string name="button_login_registration">Регистрация</string>
    <string name="button_refresh">Обновить</string>

    <string name="title_home">Главная</string>
    <string name="title_statistic">Статистика</string>
    <string name="title_control">Управление</string>
    <string name="title_device">Устройства</string>
    <string name="title_setting">Настройки</string>


    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Добро пожаловать !"</string>
    <string name="invalid_username">Не правильное имя пользователя</string>
    <string name="invalid_password">Неправильный пароль</string>
    <string name="login_failed">"Ошибка входа"</string>

    <string name="register">Регистрация</string>
    <string name="register_email">Почта</string>
    <string name="register_password">Пароль</string>
    <string name="register_true_password">Подтверждение пароля</string>
    <string name="register_error_email">Неправильный адресс!</string>
    <string name="register_error_password">Пароль должен совпадать!</string>

</resources>
