<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/smart_home_logo_splash_screen320x240"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/statistic320x240"
        android:title="@string/title_statistic" />

    <item
        android:id="@+id/navigation_control"
        android:icon="@drawable/smart_home320x240"
        android:title="@string/title_control" />
    <item
        android:id="@+id/navigation_device"
        android:icon="@drawable/device320x240"
        android:title="@string/title_device" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/setting320x240"
        android:title="@string/title_setting" />

</menu>
